--- a/example/index.html
+++ b/example/index.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="Author" content="Ogus">
-	<meta name="Description" content="A Javascript implementation of a fast Poisson Disk point sampling algorithm">
+	<meta name="Description" content="A Javascript implementation of a fast Poisson Disk sampling algorithm for random 2D points generation.">
 	<link rel="stylesheet" href="https://unpkg.com/picnic">
 
-	<script type="text/javascript" src="../src/poisson-disk.min.js"></script>
-	<script type="text/javascript" src="demo.js" defer></script>
+	<script type="text/javascript" src="../src/poisson-disk.js"></script>
+	<script type="text/javascript" src="example.js" defer></script>
 
-	<title>Poisson Disk Sampling - Demo</title>
+	<title>Poisson Disk Sampling - Demonstration</title>
 </head>
 
 <body>
@@ -21,20 +21,17 @@
     </div>
   </nav>
 
-	<div class="flex one center" style="padding:60px 10px 10px">
-
-		<div class="four-fifth three-fifth-400 two-fifth-800 fifth-1200">
+	<div class="flex twelve center" style="padding:60px 10px 10px">
+		<div class="fifth-1200 two-fifth-800 four-fifth">
 			<div class="flex two center">
 					<label>Sampling radius: </label><input type="number" id="radius_input" value="20" min="5" max="50">
 				<button class="center" id="button">Start</button>
 			</div>
 		</div>
 
-		<div class="full four-fifth-800">
-      <div class="flex two center"><div class="full four-fifth-800 three-fifth-1200">
-          <canvas id="canvas" style="width: 100%; height: auto; border: 1px solid #555" width="500" height="400"></canvas>
-      </div></div>
-    </div>
+		<div class="two-fifth-1200 three-fifth-800 four-fifth">
+			<canvas id="canvas" style="width: 100%; height: auto; border: 1px solid #555"></canvas>
+		</div>
 	</div>
 
 	<div class="modal">
@@ -48,7 +45,6 @@
 	      <p>Nothing to display currently</p>
 	    </section>
 			<footer>
-				<!-- <label for="modal_info" class="button dangerous">Close</label> -->
 			</footer>
 		</div>
 	</div>
